--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="container text-center my-auto">
       <h1 class="mb-1">Panchito</h1>
       <h3 class="mb-5">
-        <em>A Un espacio Web para Felicitarte por tu cumple <3 </em>
+        <em>Este es un espacio Web para Felicitarte por tu cumple <3 </em>
       </h3>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Dale clic XD</a>
     </div>
@@ -67,7 +67,7 @@
         <div class="col-lg-10 mx-auto">
           <h2>Eres una de las pocas personas a las que puedo recurrir para hablar de cualquier tema</h2>
           <p class="lead mb-5">Así que eso te hace una persona muy especial :v, espero que este día la hayas pasado muy lindo y al menos hayas tenido tortita , te quiero y respeto un montonoonnn
-            <a href="https://unsplash.com/">It's a joke</a>!</p>
+            <a href="https://unsplash.com/">Sorry por la tardanza y por el style, páginas web no es mi área u.u</a>!</p>
           <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">que tienes que ofrecer al resto de la humanidad!!!!</a>
         </div>
       </div>
