--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
   <section class="content-section bg-primary text-white">
     <div class="container text-center">
       <h2 class="mb-4">The buttons below are impossible to resist...</h2>
-      <a href="#!" class="btn btn-xl btn-light mr-4">Click aquí un abrazo virtual</a>
-      <a href="#!" class="btn btn-xl btn-dark">NO crees?</a>
+      <a class="btn btn-xl btn-light mr-4" href="https://tenor.com/view/abrazo-virtual-cargando-enviar-gif-5521433">Click aquí un abrazo virtual</a>
+      <a class="btn btn-xl btn-dark"  href="https://tenor.com/view/abrazo-grandote-gif-8769587" >NO crees?</a>
+       
     </div>
   </section>
 
